Bug 65139 - Sidebar: apply page-style 'landscape' to a landscape page set using sidebar will result in portrait layout
Summary: Sidebar: apply page-style 'landscape' to a landscape page set using sidebar w...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks: Sidebar-Properties
  Show dependency treegraph
 
Reported: 2013-05-29 19:40 UTC by Jorendc
Modified: 2016-10-24 14:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot 1 (62.18 KB, image/png)
2013-05-29 19:44 UTC, Jorendc
Details
Screenshot 2 (39.37 KB, image/png)
2013-05-29 19:44 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jorendc 2013-05-29 19:40:56 UTC
How to test

* Enable Sidebar (Tools > Options > LibreOffice > Advanced, then restart, View > Sidebar).
* Unfold the 'page' section of the 'property' tab (see screenshot 1)
* Set 'orientation' to Landscape
* Go to the 'Styles and formatting' tab (see screenshot 2)
* Go to 'page styles' (4th icon on the top)
* Apply 'Landscape' page style (double click)

Result: page will become portrait again.
Doing it in the reverse order (first page style, then orientation) result in good behavior.

Tested using Mac OSX 10.8.3 with LibreOffice 4.1.0 beta 1 (Version: 4.1.0.0.beta1
Build ID: 3a2c2d2417101e45fe07cfd8358acf2204a98f3)

Kind regards,
Joren
Comment 1 Jorendc 2013-05-29 19:44:23 UTC
Created attachment 79981 [details]
Screenshot 1
Comment 2 Jorendc 2013-05-29 19:44:40 UTC
Created attachment 79982 [details]
Screenshot 2
Comment 3 m_a_riosv 2013-05-30 00:17:40 UTC
I can not reproduce with:
Win7x64 Ultimate
Version: 4.1.0.0.beta1 Build ID: 5271b34bec742e190e2fe5a7dadb7334a705b54
Comment 4 V Stuart Foote 2013-05-30 06:59:41 UTC
Joren,

I also can not confirm the exact issue you report with today's build of master on Windows, will take a look at a Linux build a bit later to be certain. Possibly an OSX only issue?

Using Version: 4.2.0.0.alpha0+
Build ID: 526fbddf6935b0a3983563af71c4ccea4561ceb
TinderBox: Win-x86@6, Branch:master, Time: 2013-05-30_00:05:37

Please reference this AOO wiki for sidebar component names: http://wiki.openoffice.org/wiki/File:SidebarNames.png  as it is going to be very helpful if we adopt a common way of referring to the GUI elements of the Sidebar. I believe the AOO devs adopted Symphony nomenclature. Proper component names are sidebar, tab bar, tab, configuration menu button, title bar, deck, content panel title and content panel.

Each soffice component with Symphony counterpart (writer, impress, calc & draw) presents a different tab bar composition, with impress the most complex.

In screenshot 1 you have used the "Properties" button of the "Tab bar" to open the "Page layout content panel". And then used the "Orientation" tool bar to select landscape from its list.

In screenshot 2 you have used the "Styles and Formatting" radio button of the "Tab bar" to open the "Styles and Formatting content panel", which for Writer is the only content panel present in the "deck". This content panel contains a horizontal tool bar and multiple style buttons (paragraph, character, frame, page & list) each when active exposes a tree list of style selections--you've selected the Page styles button and from its tree list, the apply "Landscape" style action.

To restate this particular issue--a page orientation set "Landscape" from the Properties content panel may be disrupting assertion of the Page styles--specifically ability to toggle between the "Default style" (normally portrait orientation), and the "Landscape" style. 

I suspect the problem (or is it by design?) is that when using Properties panel to set a landscape page orientation--that becomes the default page style--and if then applying Landscape page style from Page Styles content panel... it has no action to perform because it is already in landscape style.

So, what may be missing from the GUI is a tree list page style to apply Portrait page layout against a landscape default?
Comment 5 V Stuart Foote 2013-05-30 15:48:37 UTC
issue happens outside Sidebar see aoo#122416 for additional discussion
Comment 6 Commit Notification 2013-05-30 16:11:40 UTC
Oliver-Rainer Wittmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c3366bc7bdcae110c3c735bb67cfeddad9a6c744

Resolves: fdo#65139# #i122416# SwDoc::GetPageDescFromPool correction



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.