Resolves: fdo#65139# #i122416# SwDoc::GetPageDescFromPool correction

and refactoring

(cherry picked from commit 384aa00b12fbfd0d888858dc5677825637e1e98b)

Conflicts:
	sw/source/core/doc/poolfmt.cxx

Change-Id: Ia5567173153e218b754ad73c50b56eff87b49822